[gd_scene load_steps=2 format=3 uid="uid://cdvynxm887iba"]

[ext_resource type="Script" uid="uid://bliyx3wtom1fe" path="res://scripts/UI.gd" id="1_dj8aq"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_dj8aq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Player1Health" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Player1Health"]
layout_mode = 2
text = "P1"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Player1Health"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Player2Health" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Player2Health"]
layout_mode = 2
text = "P2"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Player2Health"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="ResultLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -11.5
offset_right = 54.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Player 1 Wins!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = 76.0
offset_right = 32.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
